# ccauth

./: .gitignore  BROWSER_HANDOFF_PROJECT_PLAN.md  LICENSE  README.md  pyproject.toml
ccauth/: __init__.py  cli.py  errors.py  oauth.py  runner.py
ccauth/handoff/: __init__.py  config.py  runner.py  server.py
ccauth/handoff/notifiers/: __init__.py  base.py  slack.py
ccauth/handoff/templates/: intervention.html  notification.jinja
ccauth/modes/: __init__.py  _callback.py  cookie_based.py  default_browser.py
