[project]
name = "ccauth"
version = "0.1.0"
description = "Automate the Claude Code OAuth flow. Returns the native ~/.claude/.credentials.json payload as JSON on stdout."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "synacktra.work@gmail.com", email = "synacktra.work@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "patchright>=1.48",
]

[project.optional-dependencies]
handoff = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jinja2>=3.1",
]

[project.scripts]
ccauth = "ccauth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
